<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="eventViewModel"
            type="com.fsdevelopment.sicreditestapp.ui.detail.EventDetailViewModel" />

        <variable
            name="event"
            type="com.fsdevelopment.sicreditestapp.data.model.Event" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/expandedImage"
                    imageUrl="@{event.image}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/placeholder" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/closeButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="-10dp"
                        android:background="?attr/actionBarItemBackground"
                        android:src="@drawable/ic_action_close" />

                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:onClick="@{() -> eventViewModel.saveRemoveFavorite(event)}"
            android:contentDescription="@string/title_favorite"
            android:src="@drawable/ic_action_not_favorite"
            app:backgroundTint="@color/colorAccent"
            app:changeIconFavorite="@{event.isFavorite}"
            app:fabSize="mini"
            app:layout_anchor="@id/appBarLayout"
            app:layout_anchorGravity="bottom|end" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/title_share"
            android:src="@drawable/ic_action_share"
            app:fabSize="mini"
            app:layout_anchor="@id/appBarLayout"
            app:layout_anchorGravity="bottom|end" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/checkInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:contentDescription="@string/appbar_scrolling_view_behavior"
            android:text="@string/title_check_in"
            app:icon="@drawable/ic_action_check_in" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@{event.title}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Lorem Ipsum" />

                <com.google.android.material.chip.Chip
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@{String.format(@string/price_format, event.price)}"
                    android:textAlignment="center"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp"
                    app:chipBackgroundColor="@color/colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
                    tools:text="R$ 19.99" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dayTextView"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:dateFormat="@{@string/format_day_month}"
                    app:dateLong="@{event.date}"
                    app:layout_constraintStart_toEndOf="@+id/appCompatTextView"
                    app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
                    tools:text="12 de maio" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/hourTextView"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:dateFormat="@{@string/format_day_week_hour}"
                    app:dateLong="@{event.date}"
                    app:layout_constraintStart_toStartOf="@+id/dayTextView"
                    app:layout_constraintTop_toBottomOf="@+id/dayTextView"
                    tools:text="seg às 17:00 hrs" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/descTextView"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="16dp"
                    android:text="@{event.description}"
                    app:layout_constraintStart_toStartOf="@+id/hourTextView"
                    app:layout_constraintTop_toBottomOf="@+id/hourTextView"
                    tools:text="Description Event" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/localTextView"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="16dp"
                    android:text="Localização:"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/descTextView"
                    app:layout_constraintTop_toBottomOf="@+id/descTextView"
                    tools:text="Localização" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/addressTextView"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="16dp"
                    android:text="@{event.address}"
                    app:layout_constraintStart_toStartOf="@+id/localTextView"
                    app:layout_constraintTop_toBottomOf="@+id/localTextView"
                    tools:text="Lorem Ipsum" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/locationMap"
                    class="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addressTextView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>